--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>My First GitHub Pages Site</title>
 </head>
 <body>
-  <h1>Hello DUNIA DAN AKHIRAT</h1>
+  <h1>Hello DUNIA AKHIRAT</h1>
 </body>
 </html>
